feat: Add parent task to periodic tasks
Signed-off-by: Chris Chen <chrischen0618@gmail.com>

--- a/test/fixtures/periodictasks.yml
+++ b/test/fixtures/periodictasks.yml
@@ -4,6 +4,7 @@ one:
   project_id: 1
   tracker_id: 1
   issue_category_id: 1
+  parent_id: 1
   assigned_to_id: 1
   author_id: 1
   subject: MyString
@@ -17,6 +18,7 @@ two:
   project_id: 1
   tracker_id: 1
   issue_category_id: 1
+  parent_id: 1
   assigned_to_id: 1
   author_id: 1
   subject: MyString
